--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -215,6 +215,7 @@ h2.title {
   margin: -10px;
 }
 .portfolio__item {
+  position: relative;
   min-width: 300px;
   width: calc(50% - 20px);
   height: 250px;
@@ -223,13 +224,26 @@ h2.title {
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 5px solid #eee;
 }
 .portfolio__item .button {
   opacity: 0;
   transition: opacity 0.3s;
+  z-index: 1;
+}
+.portfolio__item:hover .portfolio__image {
+  filter: opacity(30%);
 }
 .portfolio__item:hover .button {
   opacity: 1;
+}
+.portfolio__image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  filter: opacity(100%);
+  transition: filter 0.3s;
 }
 
 .footer {
@@ -242,6 +256,7 @@ h2.title {
   justify-content: space-between;
   align-items: center;
 }
+
 @media (min-width: 801px) {
   .page__header {
     margin-top: 30px;
