--- a/styles/scss/global/_global.scss
+++ b/styles/scss/global/_global.scss
@@ -236,6 +236,7 @@ h2.title {
         margin: -10px;
     }
     &__item {
+        position: relative;
         // max-width: 405px;
         min-width: 300px;
         width: calc(50% - 20px);
@@ -251,12 +252,25 @@ h2.title {
         .button {
             opacity: 0;
             transition: opacity 0.3s;
+            z-index: 1;
         }
         &:hover {
+            .portfolio__image {
+                filter: opacity(30%);
+            }
             .button {
                 opacity: 1;
             }
         }
+        border: 5px solid #eee;
+    }
+    &__image {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: 0;
+        filter: opacity(100%);
+        transition: filter 0.3s;
     }
 }
 
@@ -268,8 +282,5 @@ h2.title {
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
-    .button--up {
-        // margin-left: auto;
     }
 }
