--- a/styles/scss/mobile/_mobile.scss
+++ b/styles/scss/mobile/_mobile.scss
@@ -105,6 +105,11 @@ h2.title {
         padding: 0 !important;
     }
 }
+.description {
+    .title {
+        margin-bottom: 10px;
+    }
+}
 
 .portfolio {
     &__item {
@@ -113,7 +118,13 @@ h2.title {
         min-width: 0;
 
         .button {
-            opacity: 1;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+
+            &:hover {
+                opacity: 0;
+            }
         }
     }
 }
